# appcontrol

./: Cargo.toml  README.md
appcontrold/: Cargo.toml
appcontrold/src/: config.rs  db.rs  main.rs  notify.rs  proc.rs
rpm/: _service  appcontrol.spec  appcontrold.service  appcontroll.spec  appcontrolld.service
vocab_trainer/: Cargo.toml
vocab_trainer/src/: lib.rs  main.rs  progress.rs  quiz.rs  ui.rs  words.rs
xpopup/: Cargo.toml
xpopup/src/: lib.rs  main.rs  ui.rs  wayland.rs  x11.rs
